--- a/fotografer.html
+++ b/fotografer.html
@@ -196,10 +196,10 @@ header p{
   <div class="paket-grid">
     <div class="paket-card">
       <h3>Prewedding Indoor</h3>
-      <div class="harga">Rp 1.500.000</div>
+      <div class="harga">Rp 500.000</div>
       <ul>
         <li>Studio / indoor location</li>
-        <li>Durasi 2 jam</li>
+        <li>Durasi 1 jam</li>
         <li>1 fotografer</li>
         <li>20 foto edited HD</li>
         <li>Free arahan gaya</li>
@@ -209,10 +209,10 @@ header p{
 
     <div class="paket-card best">
       <h3>Prewedding Outdoor</h3>
-      <div class="harga">Rp 2.500.000</div>
+      <div class="harga">Rp 950.000</div>
       <ul>
         <li>Lokasi outdoor</li>
-        <li>Durasi 4 jam</li>
+        <li>Durasi 2 jam</li>
         <li>1 fotografer</li>
         <li>40 foto edited HD</li>
         <li>Free moodboard</li>
@@ -232,12 +232,13 @@ header p{
   <div class="paket-grid">
     <div class="paket-card best">
       <h3>Wedding Documentation</h3>
-      <div class="harga">Rp 4.000.000</div>
+      <div class="harga">Rp 1.000.000</div>
       <ul>
         <li>Akad & resepsi</li>
         <li>Durasi hingga 8 jam</li>
-        <li>2 fotografer</li>
-        <li>200+ foto edited HD</li>
+        <li>1 fotografer</li>
+        <li>100+ foto edited HD</li>
+        <li>Cetak foto album</li>
         <li>Google Drive</li>
       </ul>
       <a href="https://wa.me/6285929951565" class="btn-order">Pesan Paket</a>
@@ -255,7 +256,7 @@ header p{
   <div class="paket-grid">
     <div class="paket-card">
       <h3>Event Documentation</h3>
-      <div class="harga">Rp 1.500.000</div>
+      <div class="harga">Rp 800.000</div>
       <ul>
         <li>Durasi hingga 4 jam</li>
         <li>1 fotografer</li>
