--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
 <!-- LOGO -->
 <section>
   <div class="brand">
-    <img src="logo.png" alt="Dhsyt Studio">
+    <img src="images/logo.png" alt="Dhsyt Studio">
     <h3>Dhsyt Studio</h3>
     <p>Invitation • Photography • Creative Studio</p>
   </div>
@@ -218,16 +218,15 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   </div>
 
   <div class="service-single-card">
-    <h3>Pilih Layanan</h3>
     <p>Semua layanan kami tersedia di sini. Klik tombol untuk menuju halaman detail.</p>
     
 <div class="service-buttons">
   <a href="#undangan-digital" class="btn order">Undangan Digital</a>
-<a href="undangan-fisik" class="btn order">
+<a href="undangan-fisik/undangan-fisik.html" class="btn order">
   Undangan Fisik
 </a>
-  <a href="fotografer" class="btn order">Fotografer</a>
-  <a href="studio-foto" class="btn order">Studio Foto</a>
+  <a href="fotografer/fotografer.html" class="btn order">Fotografer</a>
+  <a href="studio-foto/studio-foto.html" class="btn order">Studio Foto</a>
 </div>
   </div>
 </section>
@@ -240,7 +239,8 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   </div>
   <div class="grid">
   <div class="card">
-    <div class="thumb"><img src="foto1.jpg" alt="Produk 1"></div>
+    <div class="thumb">
+      <img src="images/foto1.jpg" alt="Produk 1"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Deep-Burgundy</div>
@@ -250,7 +250,8 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   </div>
 
   <div class="card">
-    <div class="thumb"><img src="foto2.jpg" alt="Produk 2"></div>
+    <div class="thumb">
+      <img src="images/foto2.jpg" alt="Produk 2"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Blue-Dusty</div>
@@ -260,7 +261,8 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   </div>
 
   <div class="card">
-    <div class="thumb"><img src="foto3.jpg" alt="Produk 3"></div>
+    <div class="thumb">
+      <img src="images/foto3.jpg" alt="Produk 3"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Gold-Metalic</div>
@@ -270,7 +272,8 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   </div>
 
   <div class="card">
-    <div class="thumb"><img src="foto4.jpg" alt="Produk 4"></div>
+    <div class="thumb">
+      <img src="images/foto4.jpg" alt="Produk 4"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Sage-Natural</div>
@@ -286,7 +289,23 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   <p>Konsultasi gratis & respon cepat via WhatsApp</p>
   <a href="https://wa.me/6285929951565">Hubungi Kami</a>
 </section>
+<section style="max-width:1000px;margin:-30px auto 60px;padding:0 20px;text-align:center;">
+  <h3 style="font-family:'Playfair Display',serif;font-size:26px;margin-bottom:10px;">
+    Lokasi Studio Kami
+  </h3>
+  <p style="font-size:15px;color:#666;margin-bottom:20px;">
+    Datang langsung ke studio kami untuk konsultasi & sesi foto
+  </p>
 
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m17!1m12!1m3!1d3967.34721995458!2d106.25784207498927!3d-6.083832993902349!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m2!1m1!2zNsKwMDUnMDEuOCJTIDEwNsKwMTUnMzcuNSJF!5e0!3m2!1sid!2sid!4v1769697320782!5m2!1sid!2sid"
+    width="100%"
+    height="320"
+    style="border:0;border-radius:20px;box-shadow:0 15px 30px rgba(0,0,0,0.08);"
+    loading="lazy"
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</section>
 <footer>
   © 2026 Dhsyt Studio - Premium Invitation & Photography
 </footer>
