--- a/studio-foto.html
+++ b/studio-foto.html
@@ -179,51 +179,37 @@ header p{
     <p>Pilih paket sesuai kebutuhan Anda</p>
   </div>
 
-  <div class="paket-grid">
+<div class="paket-grid">
 
-    <!-- Paket A -->
-    <div class="paket-card">
-      <h3>Paket A</h3>
-      <div class="paket-harga">Rp 150.000</div>
-      <ul>
-        <li>Durasi 30 menit</li>
-        <li>Background studio</li>
-        <li>5 foto edited HD</li>
-        <li>1–2 orang</li>
-      </ul>
-      <a href="https://wa.me/6285929951565?text=Halo%20saya%20ingin%20paket%20Studio%20Foto%20A"
-         class="btn-order">Pesan Paket</a>
-    </div>
-
-    <!-- Paket B -->
-    <div class="paket-card best">
-      <h3>Paket B</h3>
-      <div class="paket-harga">Rp 300.000</div>
-      <ul>
-        <li>Durasi 60 menit</li>
-        <li>Background studio</li>
-        <li>15 foto edited HD</li>
-        <li>Hingga 5 orang</li>
-      </ul>
-      <a href="https://wa.me/6285929951565?text=Halo%20saya%20ingin%20paket%20Studio%20Foto%20B"
-         class="btn-order">Pesan Paket</a>
-    </div>
-
-    <!-- Paket C -->
-    <div class="paket-card">
-      <h3>Paket C</h3>
-      <div class="paket-harga">Rp 500.000</div>
-      <ul>
-        <li>Durasi 90 menit</li>
-        <li>2 konsep studio</li>
-        <li>25 foto edited HD</li>
-        <li>Free arahan gaya</li>
-      </ul>
-      <a href="https://wa.me/6285929951565?text=Halo%20saya%20ingin%20paket%20Studio%20Foto%20C"
-         class="btn-order">Pesan Paket</a>
-    </div>
-
+  <!-- Paket Hemat 25K -->
+  <div class="paket-card">
+    <h3>Paket Hemat</h3>
+    <div class="paket-harga">Rp 25.000</div>
+    <ul>
+      <li>1–3 orang</li>
+      <li>Durasi 10 menit sesi foto</li>
+      <li>Free properti</li>
+      <li>Dapat semua soft file</li>
+    </ul>
+    <a href="https://wa.me/6285929951565?text=Halo%20saya%20ingin%20paket%20Studio%20Foto%2025.000"
+       class="btn-order">Pesan Paket</a>
   </div>
+
+  <!-- Paket Favorit 35K -->
+  <div class="paket-card best">
+    <h3>Paket Favorit</h3>
+    <div class="paket-harga">Rp 35.000</div>
+    <ul>
+      <li>1–5 orang</li>
+      <li>Durasi 10 menit sesi foto</li>
+      <li>Free properti</li>
+      <li>Dapat semua soft file</li>
+    </ul>
+    <a href="https://wa.me/6285929951565?text=Halo%20saya%20ingin%20paket%20Studio%20Foto%2035.000"
+       class="btn-order">Pesan Paket</a>
+  </div>
+
+</div>
 
   <div class="back-wrapper">
     <a href="index.html" class="back-btn">← Kembali ke Beranda</a>
