--- a/undangan-fisik.html
+++ b/undangan-fisik.html
@@ -191,7 +191,7 @@ header p{
 
     <div class="paket-card">
       <h3>Paket A</h3>
-      <div class="paket-harga">Rp 1.300 / pcs</div>
+      <div class="paket-harga">Rp 1.500 / pcs</div>
       <ul>
         <li>Kertas Art Paper 260gsm</li>
         <li>Cetak 2 sisi</li>
@@ -205,7 +205,7 @@ header p{
     <div class="paket-card best">
       <span class="badge">Terfavorit</span>
       <h3>Paket B</h3>
-      <div class="paket-harga">Rp 1.200 / pcs</div>
+      <div class="paket-harga">Rp 1.000 / pcs</div>
       <ul>
         <li>Kertas Ivory 300gsm</li>
         <li>Cetak 2 sisi</li>
@@ -219,14 +219,15 @@ header p{
 
     <div class="paket-card">
       <h3>Paket C</h3>
-      <div class="paket-harga">Rp 2.000 / pcs</div>
+      <div class="paket-harga">Rp 1.800 / pcs</div>
       <ul>
         <li>Kertas Linen / Jasmine</li>
         <li>Cetak full color 2 sisi</li>
         <li>Ukuran custom</li>
         <li>Desain premium eksklusif</li>
         <li>Amplop + label nama</li>
-        <li><strong>Minimal order 1.000 pcs</strong></li>
+        <li>Free undangan digital</li>
+        <li><strong>Minimal order 800 pcs</strong></li>
       </ul>
       <a href="https://wa.me/6285929951565" class="btn-order">Pesan Paket</a>
     </div>
