--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
 <!-- LOGO -->
 <section>
   <div class="brand">
-    <img src="images/logo.png" alt="Dhsyt Studio">
+    <img src="logo.png" alt="Dhsyt Studio">
     <h3>Dhsyt Studio</h3>
     <p>Invitation • Photography • Creative Studio</p>
   </div>
@@ -222,11 +222,11 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
     
 <div class="service-buttons">
   <a href="#undangan-digital" class="btn order">Undangan Digital</a>
-<a href="undangan-fisik/undangan-fisik.html" class="btn order">
+<a href="undangan-fisik" class="btn order">
   Undangan Fisik
 </a>
-  <a href="fotografer/fotografer.html" class="btn order">Fotografer</a>
-  <a href="studio-foto/studio-foto.html" class="btn order">Studio Foto</a>
+  <a href="fotografer" class="btn order">Fotografer</a>
+  <a href="studio-foto" class="btn order">Studio Foto</a>
 </div>
   </div>
 </section>
@@ -240,7 +240,7 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
   <div class="grid">
   <div class="card">
     <div class="thumb">
-      <img src="images/foto1.jpg" alt="Produk 1"></div>
+      <img src="foto1.jpg" alt="Produk 1"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Deep-Burgundy</div>
@@ -251,7 +251,7 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
 
   <div class="card">
     <div class="thumb">
-      <img src="images/foto2.jpg" alt="Produk 2"></div>
+      <img src="foto2.jpg" alt="Produk 2"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Blue-Dusty</div>
@@ -262,7 +262,7 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
 
   <div class="card">
     <div class="thumb">
-      <img src="images/foto3.jpg" alt="Produk 3"></div>
+      <img src="foto3.jpg" alt="Produk 3"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Gold-Metalic</div>
@@ -273,7 +273,7 @@ footer{text-align:center;padding:40px 20px;font-size:14px;color:var(--muted);}
 
   <div class="card">
     <div class="thumb">
-      <img src="images/foto4.jpg" alt="Produk 4"></div>
+      <img src="foto4.jpg" alt="Produk 4"></div>
     <div class="info">
       <div class="price">Rp 34.000</div>
       <div class="title">Sage-Natural</div>
